--- a/css/ex_css_1.html
+++ b/css/ex_css_1.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
-      h1,h2
-      {
-        color:red;
-        font-size:10px
+      h1,
+      h2 {
+        color: red;
+        font-size: 10px;
       }
-      h2
-      {
-        text-decoration:underline;
+      h2 {
+        text-decoration: underline;
       }
-      header h1
-      {
-        border:1px solid red;
+      header h1 {
+        border: 1px solid red;
       }
     </style>
   </head>
