--- a/css/ex_css_2.html
+++ b/css/ex_css_2.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
-      #selected
-      {
-        border:red 1px solid;
-        padding:30px;
-        margin:50px;
+      #selected {
+        border: red 1px solid;
+        padding: 30px;
+        margin: 50px;
       }
-      #extra
-      {
-        border:blue 1px solid;
+      #extra {
+        border: blue 1px solid;
       }
     </style>
   </head>
