--- a/javascript/2.html
+++ b/javascript/2.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
-      .em
-      {
-        text-decoration:underline;
+      .em {
+        text-decoration: underline;
       }
     </style>
   </head>
@@ -21,6 +20,10 @@
       <li>한이람</li>
       <li>한이은</li>
     </ul>
-    <input type="button" value="강조" onclick="document.getElementById('target').className='em'" />
+    <input
+      type="button"
+      value="강조"
+      onclick="document.getElementById('target').className='em'"
+    />
   </body>
 </html>
